--- a/Home.css
+++ b/Home.css
@@ -165,3 +165,15 @@ header::after {
   }
 
 }
+
+footer {
+  background-color: #E54B4B;
+  text-decoration: none;
+  text-align: center;
+  font-weight: light;
+  font-size: 1.1em;
+}
+
+.footer-p {
+  font-style: italic;
+}
