--- a/Home.css
+++ b/Home.css
@@ -1,4 +1,8 @@
 /* colors -> https://coolors.co/e54b4b-ebebd3-464655-e4b363-e8e9eb */
+* {
+  box-sizing: border-box;
+}
+
 html {
   height: 100%;
 }
@@ -6,8 +10,8 @@ html {
 @import url('https://fonts.googleapis.com/css?family=Quicksand:400,700');
 
 body {
-  background: #F0F8EA;
-  font-family: 'Quicksand', sans-serif;
+  background-color: rgb(255, 246, 221);
+  font-family: 'courier new', monospace;
   margin: 0 auto;
   min-height: 100%;
   display: flex;
@@ -227,4 +231,55 @@ footer {
 
 .copy-right {
   color: white;
+}
+
+.s2content {
+  margin: 20px;
+}
+
+.s2content h1 {
+  font-size: 2em;
+  font-weight: lighter;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Float four columns side by side */
+.column {
+  float: left;
+  width: 25%;
+  padding: 0 10px;
+}
+
+/* Remove extra left and right margins, due to padding */
+.row {margin: 0 -5px;}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive columns */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
+
+/* Style the counter cards */
+.card2 {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 16px;
+  text-align: center;
+  background-color: #f1f1f1;
 }
